--- a/fly.toml
+++ b/fly.toml
@@ -1,40 +1,19 @@
 # Fly.io configuration for Zobbo
-# Rename the app below or deploy with: fly deploy -a <your-app-name>
+# Adjust `app` and `primary_region` to your account/region.
 app = "zobbo"
-primary_region = "lhr"
-
-[build]
-  dockerfile = "Dockerfile"
 
 [env]
   RUST_LOG = "info"
+  PORT = "8080"
 
-[experimental]
+[http_service]
+  internal_port = 8080
+  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-
-[[services]]
-  internal_port = 8080
-  protocol = "tcp"
-  processes = ["app"]
-  
-  [services.concurrency]
+  min_machines_running = 1
+  # Concurrency limits (tune later)
+  [http_service.concurrency]
     type = "requests"
-    hard_limit = 50
-    soft_limit = 40
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [[services.http_checks]]
-    interval = "10s"
-    timeout = "2s"
-    grace_period = "5s"
-    method = "get"
-    path = "/healthz"
-    protocol = "http"
+    soft_limit = 20
+    hard_limit = 25
